# sanctum-block-rewards-cli

./: .pre-commit-config.yaml  Cargo.toml  README.md
src/: lib.rs  main.rs  solana_utils.rs  tx_utils.rs  utils.rs
src/subcmd/: calculate.rs  calculate_with_dune.rs  mod.rs  share.rs  sign.rs  transfer.rs  transfer_rewards.rs  verify.rs
tests/: utils.rs
