[package]
name = "sanctum-block-rewards-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sanctum-rewards"
path = "src/main.rs"

[lib]
name = "sanctum_block_rewards_cli"

[dependencies]
clap = { version = "^4", features = ["derive"] }
tokio = { version = "^1", features = ["rt-multi-thread"] }
borsh = "^1"
indicatif = "0.17.11"
futures = "0.3.31"
inquire = "0.7.5"
colored = "3.0.0"
spinners = "4.1.1"
dirs-next = "2.0.0"
serde_json = "1.0.138"
comfy-table = "7.1.4"
bs58 = "0.5.1"
reqwest = { version = "0.11", features = ["json"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
spl-memo = { version = "^5", features = ["no-entrypoint"] }

# sanctum solana utils
sanctum-solana-cli-utils = { features = ["clap"], git = "https://github.com/igneous-labs/sanctum-solana-utils" }
sanctum-solana-client-utils = { git = "https://github.com/igneous-labs/sanctum-solana-utils" }
spl_stake_pool_interface = { features = ["serde"], git = "https://github.com/igneous-labs/sanctum-solana-utils" }
sanctum-spl-stake-pool-lib = { git = "https://github.com/igneous-labs/sanctum-solana-utils" }
solana-readonly-account = { git = "https://github.com/igneous-labs/sanctum-solana-utils" }

solana-client = ">=1.18"
solana-sdk = ">=1.18"




